tests/fixtures/valid/function-with-params.wgsl
// Function with parameters and return type
fn add(a: f32, b: f32) -> f32 {
    return a + b;
}

fn multiply(x: i32, y: i32) -> i32 {
    return x * y;
}
