tests/fixtures/invalid/missing-paren.wgsl
// Missing closing parenthesis
fn test(a: f32, b: f32 {
    return a + b;
}
